[package]
name = "ronway-scanner"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
rustls = { version = "0.23", features = ["ring"] }
rustls-native-certs = "0.7"
webpki-roots = "0.26"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
x509-parser = "0.16"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
rayon = "1"
colored = "2"
indicatif = "0.17"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
hickory-resolver = "0.24"
